Added comprimised images

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <br> I'm currently working as Java and JavaScript Developer in Münster, Germany.<br> I've got diverse
                     interests in computer science, reaching from programming over software architecture to virtual reality.
                 </p>
-                <a href="http://github.com/ChFlick">Check me out on GitHub <img src="img/github.jpg" alt="GitHub-Profile"></a>
+                <a href="http://github.com/ChFlick">Check me out on GitHub <img src="img/github-min.jpg" alt="GitHub-Profile"></a>
             </div>
         </div>
     </section>
@@ -109,7 +109,7 @@
                                         <h4>Smoody [WIP]</h4>
                                         <small>A Xamarin.forms App to organize your Fridge<br>C#</small>
                                     </div>
-                                    <img src="img/smartphone.jpeg" class="img-fluid" alt="">
+                                    <img src="img/smartphone-min.jpeg" class="img-fluid" alt="">
                                 </a>
                             </div>
                         </div>
@@ -122,7 +122,7 @@
                                         <h4>Smart Lighting Cologne</h4>
                                         <small>A student project with Apache Flink to simulate a smart lighting system in Cologne<br>Java</small>
                                     </div>
-                                    <img src="img/smartLightingCologne.png" class="img-fluid" alt="Smart Lighting Cologne">
+                                    <img src="img/smartLightingCologne-min.png" class="img-fluid" alt="Smart Lighting Cologne">
                                 </a>
                             </div>
                         </div>
@@ -135,7 +135,7 @@
                                         <h4>"Project Pizzabutler"</h4>
                                         <small>Project Lead in a student project for a Lieferando.de-like full stack app<br>Java[Server, Android-App]<br>HTML5, CSS3, JavaScript[Web-Frontend]</small>
                                     </div>
-                                    <img src="img/pizzabutler.jpg" class="img-fluid" alt="Pizzabutler">
+                                    <img src="img/pizzabutler-min.jpg" class="img-fluid" alt="Pizzabutler">
                                 </a>
                             </div>
                         </div>
@@ -148,7 +148,7 @@
                                         <h4>Codepen.io Projects</h4>
                                         <small>Some Projects on codepen.io<br>JavaScript</small>
                                     </div>
-                                    <img src="img/codepen.png" class="img-fluid" alt="Codepen.io">
+                                    <img src="img/codepen-min.png" class="img-fluid" alt="Codepen.io">
                                 </a>
                             </div>
                         </div>
