--- a/index.html
+++ b/index.html
@@ -122,10 +122,10 @@
                                         <h4>Smart Lighting Cologne</h4>
                                         <small>A student project with Apache Flink to simulate a smart lighting system in Cologne<br>Java</small>
                                     </div>
-                                    <img src="img/smartLightingCologne-min.png" class="img-fluid" alt="Smart Lighting Cologne">
+                                    <img src="img/smartLightCologne-min.png" class="img-fluid" alt="Smart Lighting Cologne">
                                 </a>
                             </div>
-                        </div>
+                        </div>s
                     </div>
                     <div class="col-sm-6 col-md-3 col-lg-3 web">
                         <div class="portfolio-item">
