--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <h1>About Me</h1>
                 <hr>
                 <p class="lead">
-                    I like creating awesome applications in various programming languages.<br> And bouldering
+                    I like creating awesome applications in various programming languages.<br> And bouldering.
                 </p>
                 <p class="lead">
                     I just graduated from Baden-Wuerttemberg Cooperative State University Mannheim with a Bachelors Degree in "business and computer science".
@@ -130,7 +130,7 @@
                     <div class="col-sm-6 col-md-3 col-lg-3 web">
                         <div class="portfolio-item">
                             <div class="hover-bg">
-                                <a href="" title="Project Pizzabuttler">
+                                <a href="#" title="Project Pizzabuttler">
                                     <div class="hover-text">
                                         <h4>"Project Pizzabutler"</h4>
                                         <small>Project Lead in a student project for a Lieferando.de-like full stack app<br>Java[Server, Android-App]<br>HTML5, CSS3, JavaScript[Web-Frontend]</small>
