Updated profile values and text

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="container">
             <div class="midText">
                 <h2>Hi I'm Christoph Flick</h2>
-                <p class="lead">Software Engineer.<br>Java and JavaScript Developer.<br>
+                <p class="lead">A German Software Engineer.<br>Java and JavaScript Developer.<br>
             </div>
         </div>
     </section>
@@ -54,13 +54,13 @@
                 <h1>About Me</h1>
                 <hr>
                 <p class="lead">
-                    I like creating awesome applications in various programming languages.<br> And bouldering.
+                    I like to create applications in various programming languages.<br> And bouldering.
                 </p>
                 <p class="lead">
                     I just graduated from Baden-Wuerttemberg Cooperative State University Mannheim with a Bachelors Degree in "business and computer science".
-                    <br> I'm currently working as Java and JavaScript Developer in Münster, Germany.<br> I've got diverse
+                    <br> I'm currently working as Java and JavaScript (Web-)Developer in Münster, Germany.<br> I've got diverse
                     interests in computer science, reaching from programming over software architecture to virtual reality.
-                </p>
+                </p>                   
                 <a href="http://github.com/ChFlick">Check me out on GitHub <img src="img/github-min.jpg" alt="GitHub-Profile"></a>
             </div>
         </div>
@@ -78,10 +78,10 @@
                     <div class="col-md-4 col-sm-6 skill"> <span class="chart" data-percent="70"> <span class="percent">70</span> </span>
                         <h4>JavaScript</h4>
                     </div>
-                    <div class="col-md-4 col-sm-6 skill"> <span class="chart" data-percent="50"> <span class="percent">50</span> </span>
+                    <div class="col-md-4 col-sm-6 skill"> <span class="chart" data-percent="40"> <span class="percent">50</span> </span>
                         <h4>HTML & CSS</h4>
                     </div>
-                    <div class="col-md-4 col-sm-6 skill"> <span class="chart" data-percent="50"> <span class="percent">50</span> </span>
+                    <div class="col-md-4 col-sm-6 skill"> <span class="chart" data-percent="40"> <span class="percent">50</span> </span>
                         <h4>Software Architecture & Design</h4>
                     </div>
                     <div class="col-md-4 col-sm-6 skill"> <span class="chart" data-percent="30"> <span class="percent">30</span> </span>
@@ -101,19 +101,6 @@
                 <h1>Portfolio</h1>
                 <hr>
                 <div class="row">
-                    <div class="col-sm-6 col-md-3 col-lg-3 web">
-                        <div class="portfolio-item">
-                            <div class="hover-bg">
-                                <a href="https://github.com/ChFlick/Smoody" title="Smoody" rel="prettyPhoto">
-                                    <div class="hover-text">
-                                        <h4>Smoody [WIP]</h4>
-                                        <small>A Xamarin.forms App to organize your Fridge<br>C#</small>
-                                    </div>
-                                    <img src="img/smartphone-min.jpeg" class="img-fluid" alt="">
-                                </a>
-                            </div>
-                        </div>
-                    </div>
                     <div class="col-sm-6 col-md-3 col-lg-3 web">
                         <div class="portfolio-item">
                             <div class="hover-bg">
